--- a/main.tex
+++ b/main.tex
@@ -211,7 +211,7 @@
 
 \renewcommand{\vec}[1]{\mathbf{#1}}
 
-\title{Data science project: an inductive learning approach}
+\title{Data Science Project: An Inductive Learning Approach}
 \author{Filipe A. N. Verri}
 
 \hypersetup{%
@@ -229,8 +229,8 @@
     \node[anchor=south east, inner sep=0mm] at (current page.south east) {%
       \reflectbox{\includegraphics[width=\paperwidth]{images/bard2.jpg}}%
     };
-    \node[white,anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
-    \node[white,anchor=north, inner sep=5mm] at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
+    \node[white,anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data Science Project}};
+    \node[white,anchor=north, inner sep=5mm] at (title.south) {\LARGE\sffamily\uppercase{An Inductive Learning Approach}};
     \node[anchor=south west, inner sep=11mm] at (current page.south west) {\HUGE\sffamily\uppercase{F.A.N. Verri}};
   \end{tikzpicture}
 \end{titlingpage}
@@ -248,8 +248,8 @@
     {\large\sffamily Version 0.1 ``\textit{Audacious Hatchling}''};
     % {\large\sffamily Version 1.0 ``\textit{Tropical Toucan}''};
   \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\today};
-  \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
-  \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
+  \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data Science Project}};
+  \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{An Inductive Learning Approach}};
   \node[anchor=north, inner sep=5mm] at (subtitle.south) {\Large\sffamily\uppercase{Filipe A. N. Verri}};
 \end{tikzpicture}
 
@@ -261,8 +261,8 @@
   \begin{verbatim}
   @book{Verri2025,
     author = {Filipe Alves Neto Verri},
-    title = {Data science project},
-    subtitle = {An inductive learning approach},
+    title = {Data Science Project},
+    subtitle = {An Inductive Learning Approach},
     year = {2025},
     publisher = {Leanpub},
     url = {https://github.com/verri/dsp-book},
